feat: code refactor

--- a/properties/config.conf
+++ b/properties/config.conf
@@ -1,21 +1,13 @@
-[ExplorerSection]
-explorer.path=
-explorer.proxy.path=
-explorer.pipeline.path=
-explorer.business.path=
-explorer.resources.path=
-[DigraphSection]
-digraph.sequence.path=
-[OsbSection]
-osb.path=
-[GithubSection]
-github.path=
-github.endpoint=
-github.param=
+[BitbucketSection]
+bitbucket.endpoint=
+bitbucket.clone=
+bitbucket.param=200
+bitbucket.branch=develop
 [CredentialSection]
 credential.user=
 credential.tokenApi=
 [ProxySection]
+proxy.enabled=
 proxy.http=
 proxy.https=
 [ExcludeSection]
