--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-requests
-customtkinter
-configparser
-tk
-pillow==10.1.0
-matplotlib==3.7.1
-typing-extensions
-drawpyo
+requests==2.32.3
+configparser==7.0.0
+drawpyo==0.1.3
+gitpython==3.1.43
