feat: delete comments, refactor variables and update README.md

--- a/properties/config.conf
+++ b/properties/config.conf
@@ -7,10 +7,10 @@ bitbucket.branch=develop
 credential.user=
 credential.tokenApi=
 [ProxySection]
-proxy.enabled=
+proxy.enabled=true
 proxy.http=
 proxy.https=
 [ExcludeSection]
-exclude.proxies=
+exclude.proxies=exceptionHandler-PS,appExceptionHandler-PS,bookingQueueJMS-BS,BBDDSN-PS
 [ServicesSection]
-services.start.name=
+services.start.name=cdv,tour,veci
