star github integration

--- a/properties/config.ini
+++ b/properties/config.ini
@@ -3,11 +3,15 @@ endpoint=
 clone=
 param=200
 branch=develop
+[github]
+endpoint=https://api.github.com
+download_endpoint=https://raw.githubusercontent.com
+branch=main
 [credential]
-user=
+user=yraedry
 tokenApi=
 [proxy]
-enabled=true
+enabled=false
 http=
 https=
 [services]
